--- a/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/components/spotify-player/spotify-player.component.html
@@ -1,117 +1,101 @@
-<div
-	class="spotify-player"
-	*ngIf="expand"
->
-	<ng-container *ngIf="isLoading"> ...Loading </ng-container>
-
-	<ng-container *ngIf="!isLoading && track && player">
-		<div class="spotify-player__info">
-			<img
-				class="spotify-player__info-img"
-				[src]="track.album.images[0].url"
-				[alt]="track.name"
-				loading="lazy"
-			/>
-			<div class="spotify-player__info-details">
-				<p class="spotify-player__info-song">{{ track.name }}</p>
-				<p class="spotify-player__info-artist">
-					{{ getArtistsNames(track.artists) }}
-				</p>
+@if (expand) {
+	<div class="spotify-player">
+		@if (isLoading) {
+			...Loading
+		}
+		@if (!isLoading && track && player) {
+			<div class="spotify-player__info">
+				<img
+					class="spotify-player__info-img"
+					[src]="track.album.images[0].url"
+					[alt]="track.name"
+					loading="lazy"
+				/>
+				<div class="spotify-player__info-details">
+					<p class="spotify-player__info-song">{{ track.name }}</p>
+					<p class="spotify-player__info-artist">
+						{{ getArtistsNames(track.artists) }}
+					</p>
+				</div>
 			</div>
-		</div>
-
-		<div class="spotify-player__player">
-			<div class="spotify-player__player-actions">
-				<button class="spotify-player__player-actions-move">
-					<mat-icon>skip_previous</mat-icon>
-				</button>
-
-				<button
-					*ngIf="isPlaying"
-					class="spotify-player__player-actions-pause"
-				>
-					<mat-icon>pause_circle</mat-icon>
-				</button>
-
-				<button
-					*ngIf="!isPlaying"
-					class="spotify-player__player-actions-pause"
-				>
-					<mat-icon>play_circle</mat-icon>
-				</button>
-
-				<button class="spotify-player__player-actions-move">
-					<mat-icon>skip_next</mat-icon>
-				</button>
+			<div class="spotify-player__player">
+				<div class="spotify-player__player-actions">
+					<button class="spotify-player__player-actions-move">
+						<mat-icon>skip_previous</mat-icon>
+					</button>
+					@if (isPlaying) {
+						<button class="spotify-player__player-actions-pause">
+							<mat-icon>pause_circle</mat-icon>
+						</button>
+					}
+					@if (!isPlaying) {
+						<button class="spotify-player__player-actions-pause">
+							<mat-icon>play_circle</mat-icon>
+						</button>
+					}
+					<button class="spotify-player__player-actions-move">
+						<mat-icon>skip_next</mat-icon>
+					</button>
+				</div>
+				<div>
+					<input
+						type="range"
+						class="spotify-player__player-time"
+						[(ngModel)]="progress"
+						[min]="0"
+						[max]="track.durationMs"
+					/>
+				</div>
 			</div>
-
-			<div>
+			<div class="spotify-player__volume">
+				@if (volume === 0) {
+					<button class="spotify-player__volume-button">
+						<mat-icon>volume_off</mat-icon>
+					</button>
+				}
+				@if (volume > 0) {
+					<button class="spotify-player__volume-button">
+						<mat-icon>volume_up</mat-icon>
+					</button>
+				}
 				<input
 					type="range"
-					class="spotify-player__player-time"
-					[(ngModel)]="progress"
-					[min]="0"
-					[max]="track.durationMs"
+					class="spotify-player__volume-range"
+					[(ngModel)]="volume"
+					min="0"
+					max="100"
 				/>
-			</div>
-		</div>
-
-		<div class="spotify-player__volume">
-			<button
-				*ngIf="volume === 0"
-				class="spotify-player__volume-button"
-			>
-				<mat-icon>volume_off</mat-icon>
-			</button>
-
-			<button
-				*ngIf="volume > 0"
-				class="spotify-player__volume-button"
-			>
-				<mat-icon>volume_up</mat-icon>
-			</button>
-
-			<input
-				type="range"
-				class="spotify-player__volume-range"
-				[(ngModel)]="volume"
-				min="0"
-				max="100"
-			/>
-
-			<div class="spotify-player__volume-player">
+				<div class="spotify-player__volume-player">
+					@if (isPlaying) {
+						<button class="spotify-player__player-actions-pause">
+							<mat-icon>pause_circle</mat-icon>
+						</button>
+					}
+					@if (!isPlaying) {
+						<button class="spotify-player__player-actions-pause">
+							<mat-icon>play_circle</mat-icon>
+						</button>
+					}
+				</div>
 				<button
-					*ngIf="isPlaying"
-					class="spotify-player__player-actions-pause"
+					class="spotify-player__close"
+					(click)="toggleExpandPlayer()"
 				>
-					<mat-icon>pause_circle</mat-icon>
-				</button>
-
-				<button
-					*ngIf="!isPlaying"
-					class="spotify-player__player-actions-pause"
-				>
-					<mat-icon>play_circle</mat-icon>
+					<mat-icon>close_fullscreen</mat-icon>
 				</button>
 			</div>
+		}
+	</div>
+}
 
-			<button
-				class="spotify-player__close"
-				(click)="toggleExpandPlayer()"
-			>
-				<mat-icon>close_fullscreen</mat-icon>
-			</button>
-		</div>
-	</ng-container>
-</div>
-
-<button
-	*ngIf="!expand"
-	(click)="toggleExpandPlayer()"
-	class="spotify-player-button"
->
-	<img
-		src="assets/images/integrations/spotify.svg"
-		alt="Spotify"
-	/>
-</button>
+@if (!expand) {
+	<button
+		(click)="toggleExpandPlayer()"
+		class="spotify-player-button"
+	>
+		<img
+			src="assets/images/integrations/spotify.svg"
+			alt="Spotify"
+		/>
+	</button>
+}
