--- a/frontend/src/app/teams/submodules/chats/pages/chat/chat.component.html
+++ b/frontend/src/app/teams/submodules/chats/pages/chat/chat.component.html
@@ -1,5 +1,5 @@
 <main class="chat">
-	<ng-container *ngIf="currentChatRoom$ | async as chatRoom">
-		<app-chat-room [includeBackButton]="true"></app-chat-room>
-	</ng-container>
+  @if (currentChatRoom$ | async; as chatRoom) {
+    <app-chat-room [includeBackButton]="true"></app-chat-room>
+  }
 </main>
