--- a/frontend/src/app/teams/submodules/files/components/views/files-list-view/components/files-list-item/files-list-item.component.html
+++ b/frontend/src/app/teams/submodules/files/components/views/files-list-view/components/files-list-item/files-list-item.component.html
@@ -1,40 +1,35 @@
-<div
-	*ngIf="file"
-	class="files__item"
->
-	<div
-		class="files__item-preview-wrapper"
-		[matMenuTriggerFor]="menu"
-	>
-		<ng-container *ngIf="isImage; else previewIconTemplate">
-			<img
-				src="api/v1/files/{{ file.fileId }}"
-				loading="lazy"
-				alt="Preview"
-				class="files__item-preview-img"
-			/>
-		</ng-container>
+@if (file) {
+	<div class="files__item">
+		<div
+			class="files__item-preview-wrapper"
+			[matMenuTriggerFor]="menu"
+		>
+			@if (isImage) {
+				<img
+					src="api/v1/files/{{ file.fileId }}"
+					loading="lazy"
+					alt="Preview"
+					class="files__item-preview-img"
+				/>
+			} @else {
+				<mat-icon class="files__item-preview-icon">insert_drive_file</mat-icon>
+			}
+		</div>
+		<h5
+			class="files__item-title"
+			[matMenuTriggerFor]="menu"
+		>
+			{{ file.filename }}
+		</h5>
+		<p class="files__item-desc">{{ file.description }}</p>
+		<div class="files__item-bottom">
+			<p class="files__item-type">{{ file.contentType }}</p>
+			<p class="files__item-size">
+				{{ getFormattedFileSize(file.size) }}
+			</p>
+		</div>
 	</div>
-
-	<h5
-		class="files__item-title"
-		[matMenuTriggerFor]="menu"
-	>
-		{{ file.filename }}
-	</h5>
-	<p class="files__item-desc">{{ file.description }}</p>
-
-	<div class="files__item-bottom">
-		<p class="files__item-type">{{ file.contentType }}</p>
-		<p class="files__item-size">
-			{{ getFormattedFileSize(file.size) }}
-		</p>
-	</div>
-</div>
-
-<ng-template #previewIconTemplate>
-	<mat-icon class="files__item-preview-icon">insert_drive_file</mat-icon>
-</ng-template>
+}
 
 <mat-menu #menu="matMenu">
 	<button
