--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/meetings-list-view.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/meetings-list-view.component.html
@@ -1,15 +1,11 @@
-<div
-	class="meetings__list"
-	*ngIf="meetings.length > 0; else emptyMeetings"
->
-	<app-meeting-list-item
-		*ngFor="let meeting of meetings; trackBy: meetingsTrackBy"
-		[meeting]="meeting"
-	></app-meeting-list-item>
-</div>
-
-<ng-template #emptyMeetings>
+@if (meetings.length > 0) {
+	<div class="meetings__list">
+		@for (meeting of meetings; track meeting.id) {
+			<app-meeting-list-item [meeting]="meeting"></app-meeting-list-item>
+		}
+	</div>
+} @else {
 	<div class="meetings__empty">
 		<p>No meetings found</p>
 	</div>
-</ng-template>
+}
