--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="task">
+@if (task) {
 	<div
 		class="task"
 		cdkDrag
@@ -8,19 +8,15 @@
 			class="task__placeholder"
 			*cdkDragPlaceholder
 		></div>
-
 		<div class="task__header">
 			<h5 class="task__header-title">{{ task.title }}</h5>
-
 			<app-task-more-menu [task]="task"></app-task-more-menu>
 		</div>
-
 		<div class="task__description">
 			<p>
 				{{ task.description }}
 			</p>
 		</div>
-
 		<div class="task__tags">
 			<div
 				class="task__tags-item"
@@ -28,7 +24,6 @@
 			>
 				<p class="task__tags-body">{{ taskPriority }}</p>
 			</div>
-
 			<div
 				class="task__tags-item"
 				[ngStyle]="{ background: '#cedff8' }"
@@ -36,28 +31,27 @@
 				<p class="task__tags-body">{{ task.tag }}</p>
 			</div>
 		</div>
-
 		<div class="task__dates">
 			<mat-icon class="task__dates-icon">access_time</mat-icon>
 			<span>
 				{{ task.startDate | date: 'MMMM d' }}
 			</span>
-			<span *ngIf="task.endDate">
-				-
-				{{ task.endDate | date: 'MMMM d' }}
-			</span>
+			@if (task.endDate) {
+				<span>
+					-
+					{{ task.endDate | date: 'MMMM d' }}
+				</span>
+			}
 		</div>
-
 		<div class="task__footer">
 			<div class="task__footer-executor">
 				<mat-icon class="task__footer-executor-icon">person_outline</mat-icon>
 				<p>{{ task.executorMember?.fullName ?? 'Unassigned' }}</p>
 			</div>
-
 			<div class="task__footer-comments">
 				<mat-icon class="task__footer-comments-icon">comment_outline</mat-icon>
 				<p>{{ task.notesAmount }}</p>
 			</div>
 		</div>
 	</div>
-</ng-container>
+}
