--- a/frontend/src/app/events/pages/events-list/events-list.component.html
+++ b/frontend/src/app/events/pages/events-list/events-list.component.html
@@ -5,23 +5,19 @@
 
 	<!-- <app-events-filter (onFilter)="onFilter($event)"></app-events-filter> -->
 
-	<div
-		class="events__content"
-		*ngIf="events$ | async as events"
-	>
-		<ng-container [ngSwitch]="filter.view">
-			<app-events-day-view
-				*ngSwitchCase="calendarViews.Day"
-				[events]="events"
-			></app-events-day-view>
-			<app-events-week-view
-				*ngSwitchCase="calendarViews.Week"
-				[events]="events"
-			></app-events-week-view>
-			<app-events-month-view
-				*ngSwitchCase="calendarViews.Month"
-				[events]="events"
-			></app-events-month-view>
-		</ng-container>
-	</div>
+	@if (events$ | async; as events) {
+		<div class="events__content">
+			@switch (filter.view) {
+				@case (calendarViews.Day) {
+					<app-events-day-view [events]="events"></app-events-day-view>
+				}
+				@case (calendarViews.Week) {
+					<app-events-week-view [events]="events"></app-events-week-view>
+				}
+				@case (calendarViews.Month) {
+					<app-events-month-view [events]="events"></app-events-month-view>
+				}
+			}
+		</div>
+	}
 </section>
