--- a/frontend/src/app/notes/pages/notes/notes.component.html
+++ b/frontend/src/app/notes/pages/notes/notes.component.html
@@ -6,23 +6,20 @@
 	></app-notes-sidebar>
 
 	<main class="notes__content">
-		<form
-			[formGroup]="form"
-			*ngIf="selectedNote; else emptyNote"
-		>
-			<quill-editor
-				formControlName="content"
-				theme="snow"
-				[modules]="quillConfig"
-				class="quill__editor"
-				placeholder=""
-			></quill-editor>
-		</form>
+		@if (selectedNote) {
+			<form [formGroup]="form">
+				<quill-editor
+					formControlName="content"
+					theme="snow"
+					[modules]="quillConfig"
+					class="quill__editor"
+					placeholder=""
+				></quill-editor>
+			</form>
+		} @else {
+			<div class="empty-note__wrapper">
+				<p class="empty-note__label">Select note</p>
+			</div>
+		}
 	</main>
 </div>
-
-<ng-template #emptyNote>
-	<div class="empty-note__wrapper">
-		<p class="empty-note__label">Select note</p>
-	</div>
-</ng-template>
