--- a/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/dialogs/create-single-dialog/create-single-dialog.component.html
@@ -12,11 +12,9 @@
 		<mat-form-field appearance="outline">
 			<mat-label>Members</mat-label>
 			<mat-select formControlName="teamMemberId">
-				<ng-container *ngIf="members$ | async as members">
-					<ng-container *ngFor="let member of members">
-						<mat-option [value]="member.id">{{ member.fullName }}</mat-option>
-					</ng-container>
-				</ng-container>
+				@for (member of members$ | async; track member.id) {
+					<mat-option [value]="member.id">{{ member.fullName }}</mat-option>
+				}
 			</mat-select>
 		</mat-form-field>
 	</form>
