--- a/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/views/meetings-list-view/components/meeting-list-item/meeting-list-item.component.html
@@ -1,16 +1,17 @@
-<button
-	*ngIf="meeting"
-	class="meetings__item"
-	(click)="onSelectMeeting(meeting)"
->
-	<h3 class="meetings__item-title">{{ meeting.title }}</h3>
-	<p class="meetings__item-desc">
-		{{ meeting.description }}
-	</p>
-	<div class="meetings__item-bottom">
-		<p class="meetings__item-status">{{ meeting.status }}</p>
-		<p class="meetings__item-date">
-			{{ meeting.start | date: 'MMM d, h:mm a' }}
+@if (meeting) {
+	<button
+		class="meetings__item"
+		(click)="onSelectMeeting(meeting)"
+	>
+		<h3 class="meetings__item-title">{{ meeting.title }}</h3>
+		<p class="meetings__item-desc">
+			{{ meeting.description }}
 		</p>
-	</div>
-</button>
+		<div class="meetings__item-bottom">
+			<p class="meetings__item-status">{{ meeting.status }}</p>
+			<p class="meetings__item-date">
+				{{ meeting.start | date: 'MMM d, h:mm a' }}
+			</p>
+		</div>
+	</button>
+}
