--- a/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
@@ -3,27 +3,27 @@
 
 	<app-meetings-filter (filter)="onFilter($event)"></app-meetings-filter>
 
-	<div
-		class="meetings__content"
-		*ngIf="meetings$ | async as meetings"
-	>
-		<ng-container [ngSwitch]="filter.view">
-			<app-meetings-list-view
-				*ngSwitchCase="meetingsViews.LIST"
-				[meetings]="meetings"
-			></app-meetings-list-view>
-
-			<app-meetings-calendar-view
-				*ngSwitchCase="meetingsViews.CALENDAR"
-				[meetings]="meetings"
-			></app-meetings-calendar-view>
-		</ng-container>
-
-		<app-paginator
-			*ngIf="meetings.length > 0"
-			(page)="onPage($event)"
-			[pagination]="pagination"
-		>
-		</app-paginator>
-	</div>
+	@if (meetings$ | async; as meetings) {
+		<div class="meetings__content">
+			@switch (filter.view) {
+				@case (meetingsViews.LIST) {
+					<app-meetings-list-view
+						[meetings]="meetings"
+					></app-meetings-list-view>
+				}
+				@case (meetingsViews.CALENDAR) {
+					<app-meetings-calendar-view
+						[meetings]="meetings"
+					></app-meetings-calendar-view>
+				}
+			}
+			@if (meetings.length > 0) {
+				<app-paginator
+					(page)="onPage($event)"
+					[pagination]="pagination"
+				>
+				</app-paginator>
+			}
+		</div>
+	}
 </section>
