--- a/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/posts-list-view.component.html
+++ b/frontend/src/app/teams/submodules/posts/components/views/posts-list-view/posts-list-view.component.html
@@ -1,5 +1,5 @@
 <div class="posts-list">
-	<ng-container *ngFor="let post of posts; trackBy: postsTrackBy">
+	@for (post of posts; track post.id) {
 		<app-post-item [post]="post"></app-post-item>
-	</ng-container>
+	}
 </div>
