--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.html
@@ -1,34 +1,30 @@
-<div
-	class="column"
-	*ngIf="column"
->
-	<div
-		class="column__header"
-		[ngStyle]="{ 'border-bottom': getColumnBorderBottomStyle }"
-	>
-		<h4 class="column__header-title">
-			{{ column.name }} ({{ getColumnTasksCount }})
-		</h4>
-
-		<div class="column__header-toolbar">
-			<button (click)="onAddButtonClick()">
-				<mat-icon>add</mat-icon>
-				<p>Add</p>
-			</button>
+@if (column) {
+	<div class="column">
+		<div
+			class="column__header"
+			[ngStyle]="{ 'border-bottom': getColumnBorderBottomStyle }"
+		>
+			<h4 class="column__header-title">
+				{{ column.name }} ({{ getColumnTasksCount }})
+			</h4>
+			<div class="column__header-toolbar">
+				<button (click)="onAddButtonClick()">
+					<mat-icon>add</mat-icon>
+					<p>Add</p>
+				</button>
+			</div>
+		</div>
+		<div
+			class="column__container"
+			cdkDropList
+			[id]="getColumnStringId"
+			[cdkDropListConnectedTo]="connectedColumns"
+			[cdkDropListData]="column.tasks"
+			(cdkDropListDropped)="onDrop($event)"
+		>
+			@for (task of column.tasks; track task.id) {
+				<app-kanban-item [task]="task"></app-kanban-item>
+			}
 		</div>
 	</div>
-
-	<div
-		class="column__container"
-		cdkDropList
-		[id]="getColumnStringId"
-		[cdkDropListConnectedTo]="connectedColumns"
-		[cdkDropListData]="column.tasks"
-		(cdkDropListDropped)="onDrop($event)"
-	>
-		<app-kanban-item
-			*ngFor="let task of column.tasks"
-			[task]="task"
-		></app-kanban-item>
-	</div>
-</div>
+}
