--- a/frontend/src/app/teams/submodules/tasks/components/views/list-view/list-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/list-view/list-view.component.html
@@ -2,8 +2,7 @@
 	class="list"
 	multi="true"
 >
-	<app-list-panel
-		*ngFor="let column of columns; let i = index"
-		[column]="column"
-	></app-list-panel>
+	@for (column of columns; track column.id; let i = $index) {
+		<app-list-panel [column]="column"></app-list-panel>
+	}
 </mat-accordion>
